Invalidation issue when creating backing layer for fixed positioned element. https://bugs.webkit.org/show_bug.cgi?id=80647

Patch by David Reveman <reveman@chromium.org> on 2012-03-18
Reviewed by James Robinson.

Source/WebCore:

Ensure that root layer is correctly invalidated by handling scroll and
invalidation from movement of fixed position elements prior to creating
any backing layers.

Test: compositing/layer-creation/fixed-position-scroll.html

* page/FrameView.cpp:
(WebCore::FrameView::repaintFixedElementsAfterScrolling):
(WebCore):
(WebCore::FrameView::updateFixedElementsAfterScrolling):
* page/FrameView.h:
(FrameView):
* platform/ScrollView.cpp:
(WebCore::ScrollView::scrollTo):
* platform/ScrollView.h:
(WebCore::ScrollView::repaintFixedElementsAfterScrolling):
(WebCore::ScrollView::updateFixedElementsAfterScrolling):

LayoutTests:

* compositing/layer-creation/fixed-position-scroll.html: Added.
* platform/chromium-linux/compositing/layer-creation/fixed-position-scroll-expected.png: Added.

Canonical link: https://commits.webkit.org/98683@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@111139 268f45cc-cd09-0410-ab3c-d52691b4dbfc